# Calassomys

./: CMakeLists.txt  README.md  manifest.json
etc/: calassomys.conf  calassomys.conf~
src/: main.cpp  webappmanager.cpp  webappmanager.h
webapps/QuemSabe/: CMakeLists.txt
webapps/QuemSabe/WebContent/: footer.html  footer.html~  header.html  header.html~  index.html  mostrarPergunta.html  novaPergunta.html  pergunta.html  perguntar.html  resposta.html  simple.html  style.css
webapps/QuemSabe/WebContent/js/: script.js  script.js~
webapps/QuemSabe/doc/: modelo_banco.mwb  modelo_banco.mwb.bak
webapps/QuemSabe/src/: home.cpp  home.h  loadwebapp.cpp  perguntar.cpp  perguntar.h  perguntaresponse.cpp  perguntaresponse.h
webapps/QuemSabe/src/dao/: dao.cpp  dao.h
webapps/QuemSabe/src/entity/: pergunta.cpp  pergunta.h  questao.cpp  questao.h  resposta.cpp  resposta.h
webapps/QuemSabe/src/model/: homemodel.cpp  homemodel.h  perguntamodel.cpp  perguntamodel.h  respostamodel.cpp  respostamodel.h
webapps/hello/: CMakeLists.txt
webapps/hello/WebContent/: index.html
webapps/hello/src/: hello.cpp  hello.h  loadwebapp.cpp  webappconfig.cpp  webappconfig.h
webapps/helloCalassomys/: CMakeLists.txt  manifest.json
webapps/helloCalassomys/src/: hello.cpp  hello.h  webappconfig.cpp  webappconfig.h
