project(Calassomys)
cmake_minimum_required(VERSION 2.8)
find_package(Boost COMPONENTS filesystem system)
set(WEB_APP_CALASSOMYS_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../WebAppCalassomys)
include_directories(${Boost_INCLUDE_DIRS} ${WEB_APP_CALASSOMYS_PATH}/include)
#add_subdirectory(${WEB_APP_CALASSOMYS_PATH} webapp)
aux_source_directory(src SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} cppcms ${Boost_LIBRARIES})

if(UNIX)
    add_definitions(-DSUFIX_LIB=".so" -DPREFIX_LIB="lib")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++11")
    target_link_libraries(${PROJECT_NAME} dl)
endif()
